github/ci/services/kuberhealthy/manifests/kuberhealthy.yaml
---
# Source: kuberhealthy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kuberhealthy
  name: kuberhealthy
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: http
  selector:
    app: kuberhealthy
---
# Source: kuberhealthy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuberhealthy
  namespace: default
  labels:
    app: kuberhealthy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kuberhealthy
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kuberhealthy
    spec:
      volumes:
        - name: config-volume
          configMap:
            # Provide the name of the ConfigMap containing the files you want
            # to add to the container
            name: kuberhealthy
      serviceAccountName: kuberhealthy
      automountServiceAccountToken: true
      containers:
      - image: kuberhealthy/kuberhealthy:v2.4.0
        command: [/app/kuberhealthy]
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          runAsNonRoot: true
          runAsUser: 999
          allowPrivilegeEscalation: false
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 2
          periodSeconds: 4
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        name: kuberhealthy
        volumeMounts:
          - name: config-volume
            mountPath: /etc/config/
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 2
          periodSeconds: 4
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 400m
            memory: 300Mi
          limits:
            cpu: 2
            memory: 1Gi
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
