github/ci/services/kuberhealthy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuberhealthy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - status.ci.kubevirt.io
    secretName: kuberhealthy-tls
  rules:
  - host: status.ci.kubevirt.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuberhealthy
            port:
              number: 80
